# Reversi_with_several_remote_players-Server_side_with_Thread-pool

./: CMakeLists.txt  Command.h  CommandsManager.cpp  CommandsManager.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  Point.cpp  Point.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp
